# spark-advisor

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
charts/: README.md
charts/analyzer/: Chart.yaml  values-local.yaml  values.yaml
charts/analyzer/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
charts/frontend/: Chart.yaml  values.yaml
charts/frontend/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml
charts/gateway/: Chart.yaml  values-local.yaml  values.yaml
charts/gateway/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
charts/grafana/: Chart.yaml  values.yaml
charts/grafana/dashboards/: spark-advisor.json
charts/grafana/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
charts/hs-connector/: Chart.yaml  values-local.yaml  values.yaml
charts/hs-connector/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
charts/k8s-connector/: Chart.yaml  values.yaml
charts/k8s-connector/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  pvc.yaml  serviceaccount.yaml
charts/prometheus/: Chart.yaml  values.yaml
charts/prometheus/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
charts/spark-advisor/: Chart.yaml  values-local.yaml  values-minikube.yaml  values.yaml
charts/spark-advisor/templates/: _helpers.tpl
charts/storage-connector/: Chart.yaml  values-local.yaml  values.yaml
charts/storage-connector/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml
charts/tempo/: Chart.yaml  values.yaml
charts/tempo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
docs/: architecture.md  development.md  mcp-setup.md
docs/diagrams/: 01-system-overview.mmd  02-package-dependencies.mmd  03-models-package.mmd  04-analyzer-pipeline.mmd  05-nats-subjects.mmd  06-k8s-deployment.mmd  07-on-demand-flow.mmd  08-rules-hierarchy.mmd  09-batch-flow.mmd  10-gateway-task-lifecycle.mmd  11-agent-mode-loop.mmd  12-cli-flow.mmd
docs/frontend-mockup/: analyze.html  applications.html  index.html  stats.html  styles.css  task-detail.html
docs/superpowers/plans/: 2026-03-21-phase14-k8s-connector.md  2026-03-21-phase15-new-rules.md
docs/superpowers/specs/: 2026-03-21-phase14-k8s-connector-design.md  2026-03-21-phase14-k8s-connector-review.md  2026-03-21-phase15-new-rules-design.md  2026-03-21-rules-improvements-design.md
monitoring/: README.md  docker-compose.monitoring.yaml  tempo.yaml
monitoring/grafana/dashboards/: spark-advisor-nats.json  spark-advisor-rules.json  spark-advisor.json
sample_event_logs/: sample_etl_job.json
src/spark_advisor/: __init__.py  cli.py  config.py  models.py  spark_advisor.py
src/spark_advisor/ai/: advisor.py  config.py  llm_analysis_service.py  llm_service.py  prompts.py  prompts_builder.py  rules.py
src/spark_advisor/analysis/: config.py  rules.py
src/spark_advisor/api/: history_server_client.py
src/spark_advisor/core/: __init__.py  models.py  results.py
src/spark_advisor/model/: __init__.py  input.py  metrics.py  results.py
src/spark_advisor/output/: console.py
tests/: conftest.py
(+16 files in other folders)
