[project]
name = "spark-advisor"
version = "0.1.0"
description = "AI-powered Apache Spark job analyzer and configuration advisor"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["spark", "apache-spark", "performance", "optimization", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    # CLI framework - type-hint based, auto-generates help, modern replacement for argparse/click
    "typer>=0.15",
    # Beautiful terminal output - tables, colors, progress bars, syntax highlighting
    "rich>=14",
    # HTTP client - async support, modern API, replacement for requests
    "httpx>=0.28",
    # Data validation & serialization - type-safe models, JSON schema generation
    # This will feel familiar coming from Kotlin data classes
    "pydantic>=2.10",
    # Fast JSON parsing - 10x faster than stdlib json, critical for large event logs
    "orjson>=3.10",
    # Anthropic Claude SDK - official client for Claude API
    "anthropic>=0.52",
    # MCP SDK - Model Context Protocol server implementation
    "mcp>=1.9",
]

[project.scripts]
spark-advisor = "spark_advisor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_advisor"]

# ──────────────────────────────────────────────
# Ruff - extremely fast linter + formatter (replaces flake8, black, isort)
# Written in Rust, standard in Python ecosystem since 2024
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "TCH",  # type checking imports
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["spark_advisor"]

# ──────────────────────────────────────────────
# MyPy - static type checker
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ──────────────────────────────────────────────
# Pytest - test framework
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=spark_advisor",
    "--cov-report=term-missing",
]
markers = [
    "integration: marks tests that require external services",
]

# ──────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────
[tool.coverage.run]
source = ["spark_advisor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "pytest-asyncio>=1.0",
    "mypy>=1.15",
    "ruff>=0.11",
    "polyfactory>=2.21",
    "respx>=0.22",
]
